# dj-core-utils

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: create-release.yml
src/dj_core_utils/api/: client.py  exceptions.py
src/dj_core_utils/auth/: backends.py  jwt.py
src/dj_core_utils/db/: mixins.py  models.py
src/dj_core_utils/events/: local_bus.py
src/dj_core_utils/fastapi/: auth.py  schemas.py  utils.py  websockets.py
src/dj_core_utils/logging/: config.py
src/dj_core_utils/middleware/: context.py
src/dj_core_utils/presentation/: mixins.py  serializers.py  views.py
src/dj_core_utils/prometeus/: metrics.py  urls.py
src/dj_core_utils/settings/: base.py  cors.py
src/dj_core_utils/signals/: audit.py
